images 경로 재설정

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,6 +22,7 @@ spring:
       enabled: true
   sql:
     init:
+      encoding: utf-8
       data-locations:
         - classpath:db/data.sql
   jpa:
