--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,20 +3,20 @@ server:
     encoding:
       charset: utf-8
       force: true
-  port: 8080
+  port: 5000
 spring:
   mustache:
     servlet:
       expose-session-attributes: true
       expose-request-attributes: true
   datasource:
-    url: jdbc:mysql://localhost:3306/blogdb
+    url: jdbc:mysql://${RDS_HOSTNAME}:3306/metadb
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: root1234
+    username: ${RDS_USERNAME}
+    password: ${RDS_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
@@ -24,3 +24,7 @@ spring:
   output:
     ansi:
       enabled: always
+logging:
+  level:
+    "[org.hibernate.type]": TRACE
+    "[shop.mtcoding.boardproject]": INFO
